--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Band+ | Dark Lab Project</title>
-    <meta name="description" content="Band+ - Enhanced Bandcamp player with overlay controls and keyboard shortcuts">
+    <meta name="description" content="Band+ - Bandcamp player with overlay controls and keyboard shortcuts">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -75,7 +75,7 @@
 
         <!-- Product Presentation -->
         <section class="product-presentation">
-            <h2 class="presentation-title">Band+ Enhanced Bandcamp Player</h2>
+            <h2 class="presentation-title">Band+ a Bandcamp Player</h2>
             
             <!-- Player UI Image -->
             <div style="text-align: center; margin-top: 0.1rem;">
